--- a/app/views/routes/edit.html.erb
+++ b/app/views/routes/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Изменить маршрут</h1>
+<h1>Редактирование маршрута</h1>
 
 <%= form_with(model: @route, local: true) do |form| %>
   <% if @route.errors.any? %>
