--- a/app/views/trains/_form.html.erb
+++ b/app/views/trains/_form.html.erb
@@ -1,22 +1,21 @@
-<%= form_with(model: train, local: true) do |form| %>
-  <% if train.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(train.errors.count, "error") %> prohibited this train from being saved:</h2>
-
-      <ul>
-      <% train.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
+<%= form_with(model: @train, local: true) do |f| %>
+<%= render 'common/errors', resource: @train %>
   <div class="field">
-    <%= form.label :number %>
-    <%= form.text_field :number, id: :train_number %>
+    <%= f.label :number %>
+    <%= f.text_field :number, id: :train_number %>
   </div>
 
+  <div class="field">
+    <%= f.label :curren_station_id, 'Текущая станция' %>
+    <%= f.collection_select :current_station_id, RailwayStation.all, :id, :title %>
+  </div>
+
+  <div class="field">
+    <%= f.label :route_id, 'Текущий маршрут' %>
+    <%= f.collection_select :route_id, Route.all, :id, :name %>
+  </div>
+    
   <div class="actions">
-    <%= form.submit %>
+    <%= f.submit "#{ @train.new_record? ? 'Создать' : 'Изменить' }" %>
   </div>
 <% end %>
