--- a/app/views/railway_stations/show.html.erb
+++ b/app/views/railway_stations/show.html.erb
@@ -5,5 +5,17 @@
   <%= @railway_station.title %>
 </p>
 
+<% if @railway_station.routes.present? %>
+  <p>Станция входит в следующие маршруты:</p>
+  <ul>
+    <% @railway_station.routes.each do |route| %>
+      <li><%= route.name %></li>
+    <% end %>
+  </ul>
+<% else %>
+  <p>Станция не входит ни в один маршрут</p>
+<% end %>
+
+
 <%= link_to 'Редактировать', edit_railway_station_path(@railway_station) %> |
 <%= link_to 'Назад', railway_stations_path %>
