--- a/app/views/routes/show.html.erb
+++ b/app/views/routes/show.html.erb
@@ -5,5 +5,37 @@
   <%= @route.name %>
 </p>
 
+<p>
+  <strong>Станции в маршруте:</strong>
+</p>
+
+<p>
+  <% if @route.railway_stations.empty? %>
+  Нет станций в маршруте
+  <% else %>
+    <ul>
+      <% @route.railway_stations.each do |station| %>
+        <li><%= station.title %></li>
+      <% end %>
+    </ul>
+  <% end %>
+</p>
+
+<p>
+  <strong>Поезда на маршруте:</strong>
+</p>
+
+<p>
+  <% if @route.trains.empty? %>
+  Нет поездов на маршруте
+  <% else %>
+    <ul>
+      <% @route.trains.each do |train| %>
+        <li><%= train.number %></li>
+      <% end %>
+    </ul>
+  <% end %>
+</p>
+
 <%= link_to 'Редактировать', edit_route_path(@route) %> |
 <%= link_to 'Назад', routes_path %>
