--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -11,14 +11,7 @@
   </thead>
 
   <tbody>
-    <% @tickets.each do |ticket| %>
-      <tr>
-        <td><%= ticket.number %></td>
-        <td><%= link_to 'Показать', ticket %></td>
-        <td><%= link_to 'Редактировать', edit_ticket_path(ticket) %></td>
-        <td><%= link_to 'Удалить', ticket, method: :delete, data: { confirm: 'Вы уверены?' } %></td>
-      </tr>
-    <% end %>
+    <%= render @tickets %>
   </tbody>
 </table>
 
