--- a/app/views/tickets/new.html.erb
+++ b/app/views/tickets/new.html.erb
@@ -1,26 +1,5 @@
 <h1>Добавить билет</h1>
 
-<%= form_with(model: @ticket, local: true) do |form| %>
-  <% if @ticket.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@ticket.errors.count, "error") %> prohibited this @ticket from being saved:</h2>
-
-      <ul>
-      <% @ticket.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="field">
-    <%= form.label :number %>
-    <%= form.text_field :number, id: :ticket_number %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit 'Создать'%>
-  </div>
-<% end %>
+<%= render 'form', ticket: @ticket %>
 
 <%= link_to 'Назад', tickets_path %>
