--- a/app/views/wagons/_form.html.erb
+++ b/app/views/wagons/_form.html.erb
@@ -6,11 +6,9 @@
     <%= f.collection_select :train_id, Train.all, :id, :number %>
   </div>
 
-
-
   <div class="field">
     <%= f.label :variety, 'Тип' %>
-    <%= f.select(:variety, [["Купейный", "Купейный"], ["Плацкартный", "Плацкартный"]]) %>
+    <%= f.select(:variety, ["Купейный", "Плацкартный"]) %>
   </div>
 
   <div class="field">
