--- a/app/views/wagons/_form.html.erb
+++ b/app/views/wagons/_form.html.erb
@@ -1,24 +1,33 @@
-<%= form_with(model: @wagon, local: true) do |f| %>
+<%= form_with(model: @wagon.becomes(Wagon), local: true) do |f| %>
   <%= render 'common/errors', resource: @wagon %>
-  
+
+  <div class="field">
+    <%= f.label :number, 'Номер вагона:' %>
+    <%= f.text_field :number, id: :number %>
+  </div>
+
   <div class="field">
     <%= f.label :train_id, 'Принадлежит поезду:' %>
     <%= f.collection_select :train_id, Train.all, :id, :number %>
   </div>
 
   <div class="field">
-    <%= f.label :variety, 'Тип' %>
-    <%= f.select(:variety, ["Купейный", "Плацкартный"]) %>
+    <%= f.label :type, 'Тип' %>
+    <%= f.collection_select :type, Wagon.wagons_types, :first, :last %>
   </div>
 
   <div class="field">
-    <%= f.label :upper_seats %>
-    <%= f.text_field :upper_seats, id: :upper_seats %>
-  </div>
-
-  <div class="field">
-    <%= f.label :lower_seats %>
-    <%= f.text_field :lower_seats, id: :lower_seats %>
+    <%= wagon.class %>
+      <%= f.label :upper_seats %>
+      <%= f.text_field :upper_seats, id: :upper_seats %>
+      <%= f.label :lower_seats %>
+      <%= f.text_field :lower_seats, id: :lower_seats %>
+      <%= f.label :side_upper_seats %>
+      <%= f.text_field :side_upper_seats, id: :side_upper_seats %>
+      <%= f.label :side_lower_seats %>
+      <%= f.text_field :side_lower_seats, id: :side_lower_seats %>
+      <%= f.label :seats %>
+      <%= f.text_field :seats, id: :seats %>
   </div>
 
   <div class="actions">
