--- a/app/views/wagons/index.html.erb
+++ b/app/views/wagons/index.html.erb
@@ -12,7 +12,7 @@
   </thead>
 
   <tbody>
-      <%= render @wagons %>
+      <%= render partial: "wagon", collection: @wagons %>
   </tbody>
 </table>
 
