--- a/app/views/railway_stations/_form.html.erb
+++ b/app/views/railway_stations/_form.html.erb
@@ -1,8 +1,8 @@
 <%= form_with(model: @railway_station, local: true) do |f| %>
   <%= render 'common/errors', resource: @railway_station %>
-  
+
   <div class="field">
-    <%= f.label :title %>
+    <%= f.label :title, "Название" %>
     <%= f.text_field :title, id: :railway_station_title %>
   </div>
 
