--- a/app/views/wagons/_wagon.html.erb
+++ b/app/views/wagons/_wagon.html.erb
@@ -3,5 +3,6 @@
   <td><%= Wagon.wagons_types[wagon.type] %></td>
   <td><%= link_to 'Показать', wagon_path(wagon) %></td>
   <td><%= link_to 'Редактировать', edit_wagon_path(wagon) %></td>
-  <td><%= link_to 'Удалить', wagon_path(wagon), method: :delete, data: { confirm: 'Вы уверены?' } %></td>
+  <td><%= link_to 'Удалить', wagon_path(wagon), method: :delete,
+    data: { confirm: 'Вы уверены?' } %></td>
 </tr>
