--- a/app/views/trains/_form.html.erb
+++ b/app/views/trains/_form.html.erb
@@ -1,8 +1,8 @@
 <%= form_with(model: @train, local: true) do |f| %>
   <%= render 'common/errors', resource: @train %>
-  
+
   <div class="field">
-    <%= f.label :number %>
+    <%= f.label :number, 'Номер' %>
     <%= f.text_field :number, id: :train_number %>
   </div>
 
@@ -15,7 +15,7 @@
     <%= f.label :route_id, 'Текущий маршрут' %>
     <%= f.collection_select :route_id, Route.all, :id, :name %>
   </div>
-    
+
   <div class="actions">
     <%= f.submit "#{ @train.new_record? ? 'Создать' : 'Изменить' }" %>
   </div>
