--- a/app/views/wagons/_coupe_wagon.html.erb
+++ b/app/views/wagons/_coupe_wagon.html.erb
@@ -1,9 +1,1 @@
-<p>
-  <strong>Количество верхних мест:</strong>
-  <%= @wagon.upper_seats %>
-</p>
-
-<p>
-  <strong>Количество нижних мест:</strong>
-  <%= @wagon.lower_seats %>
-</p>
+<%= render "seats_show" %>
