--- a/app/views/wagons/_economy_wagon.html.erb
+++ b/app/views/wagons/_economy_wagon.html.erb
@@ -1,19 +1,1 @@
-<p>
-  <strong>Количество верхних мест:</strong>
-  <%= @wagon.upper_seats %>
-</p>
-
-<p>
-  <strong>Количество нижних мест:</strong>
-  <%= @wagon.lower_seats %>
-</p>
-
-<p>
-  <strong>Количество верхних боковых мест:</strong>
-  <%= @wagon.side_upper_seats %>
-</p>
-
-<p>
-  <strong>Количество нижних боковых мест:</strong>
-  <%= @wagon.side_lower_seats %>
-</p>
+<%= render "seats_show" %>
