change_wagon_types_to_const

--- a/app/views/trains/_seats_show.html.erb
+++ b/app/views/trains/_seats_show.html.erb
@@ -1,6 +1,6 @@
 <% @train.uniq_wagons_types.each do |wagon_type| %>
   <ul>
-    <%= @train.wagons.first.class.wagons_types[wagon_type] %>
+    <%= @train.wagons.first.class::WAGONS_TYPES[wagon_type] %>
   </ul>
     <% @train.wagons.first.class.seats_types.each do |seats_type, localized_seats_type| %>
       <% if @train.seats_count(wagon_type, seats_type) != 0 %>
