--- a/app/views/wagons/show.html.erb
+++ b/app/views/wagons/show.html.erb
@@ -18,4 +18,4 @@
 <%= render @wagon.type.underscore %>
 
 <%= link_to 'Редактировать', edit_wagon_path(@wagon) %> |
-<%= link_to 'Назад', wagons_path %>
+<%= link_to 'Назад', @wagon.train %>
