--- a/app/views/wagons/_form.html.erb
+++ b/app/views/wagons/_form.html.erb
@@ -1,10 +1,5 @@
-<%= form_with(model: wagon.becomes(Wagon), local: true) do |f| %>
+<%= form_with(model: [@train, @wagon.becomes(Wagon)], local: true) do |f| %>
   <%= render 'common/errors', resource: @wagon %>
-
-  <div class="field">
-    <%= f.label :train_id, 'Принадлежит поезду:' %>
-    <%= f.collection_select :train_id, Train.all, :id, :number %>
-  </div>
 
   <div class="field">
     <%= f.label :type, 'Тип' %>
