add_arrival_and_departure_time

--- a/app/views/routes/show.html.erb
+++ b/app/views/routes/show.html.erb
@@ -18,6 +18,8 @@
         <tr>
           <td width="100">Название</td>
           <td>Позиция</td>
+          <td>Время прибытия</td>
+          <td>Время убытия</td>
         </tr>
       </thead>
       <tbody>
@@ -27,6 +29,20 @@
             <td>
               <%= form_tag update_position_railway_station_path(station), method: :patch do %>
                 <%= number_field_tag :position, station.position_in(@route) %>
+                <%= hidden_field_tag :route_id, @route.id %>
+                <%= submit_tag "Изменить" %>
+              <% end %>
+            </td>
+            <td>
+              <%= form_tag update_arrival_time_railway_station_path(station), method: :patch do %>
+                <%= datetime_field_tag :arrival_time, station.set_arrival_time(@route) %>
+                <%= hidden_field_tag :route_id, @route.id %>
+                <%= submit_tag "Изменить" %>
+              <% end %>
+            </td>
+            <td>
+              <%= form_tag update_departure_time_railway_station_path(station), method: :patch do %>
+                <%= datetime_field_tag :departure_time, station.set_departure_time(@route) %>
                 <%= hidden_field_tag :route_id, @route.id %>
                 <%= submit_tag "Изменить" %>
               <% end %>
