--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <h1>Поиск билета</h1>
 
 <%= form_with(url: search_path, method: :get, local: true) do |f| %>
@@ -40,9 +38,9 @@
             <td><%= @search_result.from_station.departure_time(route) %></td>
             <td><%= @search_result.to_station.arrival_time(route) %></td>
             <td>
-              <%= form_with(url: new_train_ticket_path(train), method: :get, local: true) do |f| %>
-                <%= hidden_field_tag(:from_station_id, "#{@search_result.from_station.id}") %>
-                <%= hidden_field_tag(:to_station_id, "#{@search_result.to_station.id}") %>
+              <%= form_with(url: new_admin_train_ticket_path(train), method: :get, local: true) do |f| %>
+                <%= hidden_field_tag(:from_station_id, @search_result.from_station.id) %>
+                <%= hidden_field_tag(:to_station_id, @search_result.to_station.id) %>
                 <%= button_to 'Купить' %>
               <% end %>
             </td>
