--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -12,8 +12,8 @@
   </thead>
   <tbody>
     <tr>
-      <td><%= @ticket.user.name %></td>
-      <td><%= @ticket.user.passport_number %></td>
+      <td><%= @ticket.full_name %></td>
+      <td><%= @ticket.passport_number %></td>
       <td><%= @ticket.number %></td>
     </tr>
   </tbody>
