--- a/app/views/admin/tickets/_ticket.html.erb
+++ b/app/views/admin/tickets/_ticket.html.erb
@@ -1,5 +1,6 @@
 <tr>
   <td><%= ticket.number %></td>
-  <td><%= link_to 'Показать', ticket %></td>
-  <td><%= link_to 'Удалить', ticket, method: :delete, data: { confirm: 'Вы уверены?' } %></td>
+  <td><%= link_to 'Показать', [:admin, ticket] %></td>
+  <td><%= link_to 'Редактировать', edit_admin_ticket_path(ticket) %></td>
+  <td><%= link_to 'Удалить', [:admin, ticket], method: :delete, data: { confirm: 'Вы уверены?' } %></td>
 </tr>
