--- a/app/views/admin/tickets/show.html.erb
+++ b/app/views/admin/tickets/show.html.erb
@@ -12,8 +12,8 @@
   </thead>
   <tbody>
     <tr>
-      <td><%= @ticket.user.name %></td>
-      <td><%= @ticket.user.passport_number %></td>
+      <td><%= @ticket.full_name %></td>
+      <td><%= @ticket.passport_number %></td>
       <td><%= @ticket.number %></td>
     </tr>
   </tbody>
@@ -45,4 +45,4 @@
   </tbody>
 </table>
 
-<%= link_to 'Назад', tickets_path %>
+<%= link_to 'Назад', admin_tickets_path %>
