--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,13 +11,7 @@
   <body>
     <p id="notice" class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
-
-    <% if user_signed_in? %>
-      <%= link_to "Выйти", destroy_user_session_path, method: :delete %>
-      <p>Аккаунт: <%= current_user.email %> </p>
-    <% else %>
-      <%= link_to "Войти", new_user_session_path %>
-    <% end %>
+      <%= render 'common/sign' %>
 
     <%= yield %>
 
