--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -38,10 +38,12 @@
             <td><%= @search_result.from_station.departure_time(route) %></td>
             <td><%= @search_result.to_station.arrival_time(route) %></td>
             <td>
-              <%= form_with(url: new_admin_train_ticket_path(train), method: :get, local: true) do |f| %>
-                <%= hidden_field_tag(:from_station_id, @search_result.from_station.id) %>
-                <%= hidden_field_tag(:to_station_id, @search_result.to_station.id) %>
-                <%= button_to 'Купить' %>
+              <% if current_user.nil? %>
+                <%= button_to "Купить", new_user_session_path %>
+              <% elsif current_user.admin? %>
+                <%= render 'buy_ticket', train: train, url: new_admin_ticket_path %>
+              <% else %>
+                <%= render 'buy_ticket', train: train, url: new_ticket_path %>
               <% end %>
             </td>
           </tr>
