--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -9,10 +9,8 @@
   </thead>
 
   <tbody>
-    <%= render @tickets %>
+    <%= render current_user.tickets %>
   </tbody>
 </table>
 
-<br>
-
-<%= link_to 'Добавить билет', new_ticket_path %>
+<%= link_to 'Поиск билетов', search_path %>
